Name:         blaze-markup
Version:      0.7.0.2
Homepage:     http://jaspervdj.be/blaze
Bug-Reports:  http://github.com/jaspervdj/blaze-markup/issues
License:      BSD3
License-file: LICENSE
Author:       Jasper Van der Jeugt, Simon Meier, Deepak Jois
Maintainer:   Jasper Van der Jeugt <m@jaspervdj.be>
Stability:    Experimental
Category:     Text
Synopsis:     A blazingly fast markup combinator library for Haskell
Description:
  Core modules of a blazingly fast markup combinator library for the Haskell
  programming language. The Text.Blaze module is a good
  starting point, as well as this tutorial:
  <http://jaspervdj.be/blaze/tutorial.html>.

Build-type:    Simple
Cabal-version: >= 1.8

Extra-source-files:
  CHANGELOG

Library
  Hs-source-dirs: src
  Ghc-Options:    -Wall

  Exposed-modules:
    Text.Blaze
    Text.Blaze.Internal
    Text.Blaze.Renderer.Pretty
    Text.Blaze.Renderer.String
    Text.Blaze.Renderer.Text
    Text.Blaze.Renderer.Utf8

    Text.Blaze.Html
    Text.Blaze.Html.Renderer.Pretty
    Text.Blaze.Html.Renderer.String
    Text.Blaze.Html.Renderer.Text
    Text.Blaze.Html.Renderer.Utf8
    Text.Blaze.Html4.FrameSet
    Text.Blaze.Html4.FrameSet.Attributes
    Text.Blaze.Html4.Strict
    Text.Blaze.Html4.Strict.Attributes
    Text.Blaze.Html4.Transitional
    Text.Blaze.Html4.Transitional.Attributes
    Text.Blaze.Html5
    Text.Blaze.Html5.Attributes
    Text.Blaze.XHtml1.FrameSet
    Text.Blaze.XHtml1.FrameSet.Attributes
    Text.Blaze.XHtml1.Strict
    Text.Blaze.XHtml1.Strict.Attributes
    Text.Blaze.XHtml1.Transitional
    Text.Blaze.XHtml1.Transitional.Attributes
    Text.Blaze.XHtml5
    Text.Blaze.XHtml5.Attributes

  Build-depends:
    base          >= 4    && < 5,
    blaze-builder >= 0.3  && < 0.5,
    text          >= 0.10 && < 1.3,
    bytestring    >= 0.9  && < 0.11

Test-suite blaze-markup-tests
  Type:           exitcode-stdio-1.0
  Hs-source-dirs: src markup-tests
  Main-is:        TestSuite.hs
  Ghc-options:    -Wall -fsimpl-tick-factor=200

  Other-modules:
    Text.Blaze.Tests
    Text.Blaze.Tests.Util

  Build-depends:
    HUnit                      >= 1.2 && < 1.3,
    QuickCheck                 >= 2.4 && < 2.9,
    containers                 >= 0.3 && < 0.6,
    test-framework             >= 0.4 && < 0.9,
    test-framework-hunit       >= 0.3 && < 0.4,
    test-framework-quickcheck2 >= 0.3 && < 0.4,
    -- Copied from regular dependencies...
    base          >= 4    && < 5,
    blaze-builder >= 0.3  && < 0.5,
    text          >= 0.10 && < 1.3,
    bytestring    >= 0.9  && < 0.11

Test-suite blaze-html-tests
  Type:           exitcode-stdio-1.0
  Hs-source-dirs: src html-tests
  Main-is:        TestSuite.hs
  Ghc-options:    -Wall

  Other-modules:
    Text.Blaze.Html.Tests
    Text.Blaze.Html.Tests.Util
    Util.Tests

  Build-depends:
    HUnit                      >= 1.2 && < 1.3,
    QuickCheck                 >= 2.4 && < 2.9,
    containers                 >= 0.3 && < 0.6,
    test-framework             >= 0.4 && < 0.9,
    test-framework-hunit       >= 0.3 && < 0.4,
    test-framework-quickcheck2 >= 0.3 && < 0.4,
    -- Copied from regular dependencies...
    base          >= 4    && < 5,
    blaze-builder >= 0.3  && < 0.5,
    bytestring    >= 0.9  && < 0.11,
    text          >= 0.10 && < 1.3

Benchmark RunHtmlBenchmarks
  Type:             exitcode-stdio-1.0
  Main-is:          RunHtmlBenchmarks.hs
  Hs-source-dirs: src benchmarks
  Ghc-options:    -O2 -fforce-recomp -main-is RunHtmlBenchmarks -fsimpl-tick-factor=200
  Build-depends:
    base          >= 4    && < 5,
    blaze-builder >= 0.3  && < 0.5,
    text          >= 0.10 && < 1.3,
    bytestring    >= 0.9  && < 0.11,
    criterion

Source-repository head
  Type:     git
  Location: http://github.com/jaspervdj/blaze-markup
